# euler2d_cudaFortran

./: .gitignore  LICENSE  Makefile  README.md  README.txt  m_HydroConstants.cuf  m_HydroConstants.f90  m_HydroParameters.cuf  m_HydroParameters.f90  m_HydroParameters_gpu.cuf  m_HydroPrecision.cuf  m_HydroPrecision.f90  m_HydroRun.f90  m_HydroRun_gpu.cuf  m_HydroUtils.f90  m_HydroUtils_gpu.cuf  m_Monitoring.f90  m_Monitoring_gpu.cuf  main.f90  main_gpu.cuf  test.nml
cuf/: Makefile  m_HydroConstants.cuf  m_HydroParameters.cuf  m_HydroParameters_gpu.cuf  m_HydroRun_gpu.cuf  m_HydroUtils_gpu.cuf  m_Monitoring_gpu.cuf  m_nvtx.f90  main_gpu.cuf  test.nml
serial_ref/: .gitignore  CMakeLists.txt  Makefile  m_monitoring.f90  m_nvtx.f90  m_parameters.f90  m_precision.f90  m_run.f90  m_utils.f90  main.f90  test.nml
serial_ref/cmake/: build_or_find_nvtx3.cmake  compiler_setup.cmake
stdpar/: .gitignore  CMakeLists.txt  Makefile  m_constants.f90  m_monitoring.f90  m_parameters.f90  m_run.f90  m_utils.f90  main.f90  test.nml
stdpar/cmake/: compiler_setup.cmake
